arrow spacing and margin fixes

--- a/app/assets/stylesheets/LandingSection.scss
+++ b/app/assets/stylesheets/LandingSection.scss
@@ -31,7 +31,7 @@
     color: #434747;
     display: block;
     text-align: center;
-    margin-top: 45%;
+    margin-top: 40%;
 
     @include breakpoint(medium) {
       font-size: 4rem;
